2008-01-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GdkPixbuf.xs
	* t/GdkPixbuf.t:  Add a NULL terminator to keep GdkPixbuf from
	crashing on incomplete xpm data.  Add unit tests.  Patch from
	Kevin Ryde.

	* xs/GdkRegion.xs
	* t/GdkRegion.t:  Return copy of stack rectangle instead of just
	a pointer, to avoid garbage values from get_clipbox().  Patch from
	Kevin Ryde.

	* xs/GtkStatusIcon.xs
	* t/GtkStatusIcon.t:  Fix similar stack copy bug.

	* t/GtkTreeView.t:  Avoid an assertion failure in gtk+ by making
	sure there's a node visible when testing get_visible_range().

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.164.

2008-01-09  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GdkVisual.t
	* t/GdkX11.t
	* t/GtkPaned.t: Fix some reported test failures by either being
	less conservative in what we expect or by simply testing less of
	gtk+ itself.

	* t/GdkCairo.t: Improve skip message on GdkCairo.t; don't claim
	Cairo is missing when the problem is actually an empty DISPLAY.

2008-01-08  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/PangoLayout.xs: Work around what appears to be a bug in
	ExtUtils::ParseXS' xsubpp (used by default in perl 5.10.0) for the
	pango_layout_line_x_to_index xsub: manually handle output
	arguments, i.e. dont't rely on OUTLIST.  This should fix the
	"Modification of a read-only value attempted" issue.

	* Gtk2.pm
	* Makefile.PL: Require Cairo if gtk+ >= 2.8 or pango >= 1.10.
	Previously, we just checked for gtk+ >= 2.8.  A new pango usually
	implies a new gtk+, but that's not necessarily the case.  So check
	both independently and require Cairo if either is new enough.

	* Makefile.PL
	* README: Require Glib 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* Gtk2.pm
	* NEWS
	* README: Stable release 1.163.

2008-01-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:
