@@ -1,3 +1,11 @@
+2008-01-19  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	Merge from HEAD:
+
+	* t/GtkTreeView.t: Hopefully fix some test failures involving a
+	wrong number of tests run by having every callback with tests run
+	only once.
+
 2008-01-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Merge from HEAD:
